@@ -95,3 +95,7 @@
 	background: transparent url(<?php echo elgg_get_site_url(); ?>mod/group_tools/_graphics/invisible_group2.png) no-repeat left;
 	vertical-align: top;
 }
+
+#group-tools-related-groups-form input.elgg-input-autocomplete {
+	width: 80%;
+}
